--- a/html_c/dangnhap.html
+++ b/html_c/dangnhap.html
@@ -22,7 +22,7 @@
         </form>
     </div>
     <!-- script-->
-    <script src="../html_c/dangnhap.js"></script>
+    <script src="../js_c/dangnhap.js"></script>
     <!-- <script src="indexgv.html"></script> -->
 
 </body>
