--- a/html_c/baitap1.html
+++ b/html_c/baitap1.html
@@ -70,7 +70,7 @@
     <div class="square-buttons">
       <button> <a href="../html_c/hs.html">TRẮC NGHIỆM KHÁCH QUAN</a></button>
       <button> <a href="../html_c/dshs.html">TRẮC NGHIỆM ĐÚNG SAI</a></button>
-      <button><a href="tlnhs.html">TRẢ LỜI NGẮN</a></button>
+      <button><a href="../html_c/tlnhs.html">TRẢ LỜI NGẮN</a></button>
       <button id="KT"><a href="../html_c/dethi.html">KỲ THI TỐT NGHIỆP</a></button>
   
   </div>
