--- a/html_c/game1.html
+++ b/html_c/game1.html
@@ -43,9 +43,9 @@
             <ul>
               <a href="../html_c/indexhs.html">HOME</a>
               <a href="../html_c/baitap1.html">BÀI TẬP</a>
-              <a href="../html_c/">LẬP TRÌNH</a>
+              <a href="../html_c/laptrinh1.html">LẬP TRÌNH</a>
               <!-- <a href="tailieu1.html">tài liệu</a> -->
-              <a href="../html_c/game2.html">GAME</a>
+              <a href="../html_c/game1.html">GAME</a>
             </ul>
           </div>
 
